# RAG_ONE

./: .gitignore  EmbaddingNote.txt  Embedding.ipynb  Explain.txt  NOTES.md  Note.md  README.md  main.py  pyproject.toml  requirement.txt
notebooks/: document.ipynb  pdf_loader.ipynb  pdfloader.ipynb
